Initial test commit. Sorry if I break anything! Updated SRS.tex and SRS.pdf to include our names.

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -16,6 +16,7 @@
 \usepackage{caption}
 \usepackage{pdflscape}
 \usepackage{afterpage}
+\usepackage{babel}
 
 \usepackage[round]{natbib}
 
@@ -126,8 +127,22 @@
 
 \begin{document}
 
-\title{Software Requirements Specification for \progname: subtitle describing software} 
-\author{Author Name(s)}
+\title{Software Requirements Specification for \progname: subtitle describing software}
+
+\author{
+	Bae, Jessica\\
+	\and
+	Foote, Oliver\\
+	\and
+	Hai, Jonathan\\
+	\and
+	Rangarajan, Anish\\
+	\and
+	Shah, Nish\\
+	\and
+	Zaker, Labeeb\\
+}
+
 \date{\today}
 	
 \maketitle
