--- a/docs/Common.tex
+++ b/docs/Common.tex
@@ -1,14 +1,15 @@
 %% Common Parts
 
-\newcommand{\progname}{ProgName} % PUT YOUR PROGRAM NAME HERE
-\newcommand{\authname}{Team \#, Team Name
-\\ Student 1 name and macid
-\\ Student 2 name and macid
-\\ Student 3 name and macid
-\\ Student 4 name and macid} % AUTHOR NAMES                  
+\newcommand{\progname}{Mechatronics Engineering} % PUT YOUR PROGRAM NAME HERE
+\newcommand{\authname}{Team \#1, Back End Developers
+\\ Jessica Bae
+\\ Oliver Foote
+\\ Jonathan Hai
+\\ Anish Rangarajan
+\\ Nish Shah
+\\ Labeeb Zaker} % AUTHOR NAMES                  
 
 \usepackage{hyperref}
     \hypersetup{colorlinks=true, linkcolor=blue, citecolor=blue, filecolor=blue,
                 urlcolor=blue, unicode=false}
     \urlstyle{same}
-                                
