Deleted extra files in Problem Statement folder

--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -9,8 +9,8 @@
 
 \date{}
 
-\input{Comments.tex}
-\input{Common.tex}
+\input{../Comments.tex}
+\input{../Common.tex}
 
 \setlength\parindent{0pt}
 
