Got started on Development plan. Not done with it but still wanna commit to keep track yeee

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -2,11 +2,12 @@
 
 \usepackage{booktabs}
 \usepackage{tabularx}
+\usepackage{graphicx}
 
 \title{Development Plan\\\progname}
 
 \author{\authname}
-
+\setlength\parindent{0pt}
 \date{}
 
 \input{../Comments}
@@ -20,9 +21,7 @@
 \toprule
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-Date1 & Name(s) & Description of changes\\
-Date2 & Name(s) & Description of changes\\
-... & ... & ...\\
+September 26 & N/A & Initial documentation\\
 \bottomrule
 \end{tabularx}
 \end{table}
@@ -34,18 +33,25 @@ Date2 & Name(s) & Description of changes\\
 \wss{Put your introductory blurb here.}
 
 \section{Team Meeting Plan}
+Weekly meetings to be held every Saturday at 8:00PM, and additional meetings to be planned as needed. Any meetings requiring the attendance of supervisor will have to be planned based on Dr. Macedo's availability each time. In cases of team members' absence, each absent team members are expected to bring forward their discussion topics prior to the scheduled meeting time, and review the meeting notes posted in the Discord server. Team leaders are expected to write down meeting notes for each meeting, regardless of the number of participating members.\\
 
 \section{Team Communication Plan}
+All main communication channel will be done through the Discord server, including all meetings. Secondary communication will be through Facebook group chat if necessary.\\
+
+The following is a screen shot of this team's Discord server:\\
+\begin{center}
+    \includegraphics{DiscordServer}
+\end{center}
 
 \section{Team Member Roles}
+The team will have 2 team leaders (co-leaders), Jonathan Hai and Jessica Bae will take this role. The responsibilities of team leaders are to organize meetings, record meeting notes, assign specific tasks to all team members, overlook deliverable deadlines, keep track of overall team project progress, and communicate with the TA, the professor, and the supervisor.\\
+
+The team will also have a Github leader, responsible for managing all technical Github merge requests and approving them. Labeeb Zaker will take on this role.\\
+
+The task of eviewing rubrics, and each subcomponents of the project will not be assigned to any specific member. These tasks are to be allocated to different members each time, to be decided as needed.\\
 
 \section{Workflow Plan}
-
-\begin{itemize}
-	\item How will you be using git, including branches, pull request, etc.?
-	\item How will you be managing issues, including template issues, issue
-	classificaiton, etc.?
-\end{itemize}
+For any documentation, team members are not required to put in a merge request. For any technical commits, everyone is required to put in a merge request for the Github leader to review and approve. Trello will be used for project management purposes (non-technical tasks) and Github issue tracker will be used for technical tasks.\\
 
 \section{Proof of Concept Demonstration Plan}
 
