Added info about project scheduling. Will update later with feedback

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -78,6 +78,16 @@ you will be able to overcome this risk?
 
 \section{Project Scheduling}
 
-\wss{How will the project be scheduled?}
+Firstly, a Master Project Schedule will be made with a list of all the deadlines, deliverables and Project Implementation tasks. Work will be done based on weekly sprints where tasks will be assigned to each member along with an estimated number of days needed to finish the task. This number is evaluated based on relative complexity of each task.\\
+
+Secondly, the team imposed deadline for all tasks are \textbf{two} days before the due date of the deliverable. On this day, the team will conduct a review of all the work done by the members and provide any feedback. The last day before the due date is reserved for making any final changes and small revisions. Moreover, the team will check the completed deliverable with the marking rubric.\\
+
+Finally, every two weeks, a design overhaul will be conducted wherein the team will go through the previous parts of the project and update it with any changes made as a result of the current iteration of the project.\\
+
+
+
+
+
+
 
 \end{document}
