Added some info regarding the CI plan

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -102,6 +102,10 @@ The following tools shall be used for development in software, embedded systems 
 \end{itemize}
 \item Specific plans for Continuous Integration (CI), or an explanation that CI
   is not being done
+\begin{itemize}
+\item CI will be used to block merge requests until all tests have been passed and approval has been given by atleast two members of the team. 
+\item This will speed up development by reducing the overall bugs introduced into the project.
+\end{itemize}
 \item Measuring tools for code:
 \begin{itemize}
 \item Coverage.py for measuring code coverage in Python and effectiveness of testing.
