--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -68,7 +68,43 @@ This solution device would have to capture the subtle and slow movement of elder
 Medical constraints.
 
 \section{Base Goals}
+\begin{center}
+\begin{tabular}{ | m{7em} | m{33em}| } 
+    \hline
+    \textbf{Goal} & \textbf{Explination and Reasoning} \\
+    \hline
+    Tacking Minor Movements & Most activity trackers make it difficult to track minor movements.
+    They are generally created for highly mobile individuals such as athletes or similar. Since our target audience will be older adults who have back and spinal problems, their movements will not be as pronounced as an athletic persons might be. For this reason we need to improve the sensitivity of these trackers and make sure minor movements are appropriately accounted for.  \\ 
+    \hline
+    Event Based Prompting & We want our tracker to be able to prompt individuals when it detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be prompted with specific questions about why they stopped moving. Having some high visibily prompting system such as audio and visual queues would be helpful in ensuring users are properly notified that they should complete the EMA. This data collection is required for Dr. Macdeo's research. \\ 
+    \hline
+    Battery Life & We are seeking to reach a minimum battery life of one day which will allow for daytime tracking and nighttime charging. This is a relatively standard practice with most smartphones and activty trackers performing in this manner. If a user has experienced using one of these devices the expectation of nightly charging would be acceptable. By not requiring the user to charge the device during the day we will be able to successfully track their activities without potentially losing some data to charge the device halfway through.  \\ 
+    \hline
+	Highly Simplistic User Interface/Hardware design & Becuase our user base is going to be the older adult population, some of whom many not use smartphones or smart activity trackers, it is essentially that the design of our user interface and hardware be intuitive to a user without a lot of experience using smart technology. This also improves the likelihood that a user will fill out the survery successfully and quickly when prompted to do so. \\
+	\hline
+	Graphical Presentation of Data & Dr. Macedo requested that we process the collected data into an easy to interepert graphical representation that could be used for her research and displayed to the user to provide feedback on the activities that have been tracked throughout the day. This will allow the users to better understand their movements and keep them on track for rehabilitation purposes, and help "advise" Dr. Macedo's future recommendations for rehabilitation. \\
+	\hline
+\end{tabular}
+\end{center}
 
 \section{Stretch Goals}
+\begin{center}
+\begin{tabular}{ | m{7em} | m{33em}| } 
+    \hline
+    \textbf{Goal} & \textbf{Explination and Reasoning} \\
+    \hline
+    Anomoly Detection & We want to be able to detect when certain anamolies occur, such as a user suddenly stopping movement. The goal is to detect multiple different events to be defined later. \\ 
+    \hline
+    Geotagging Events and Movements & This would be an additional benefit to the researchers. This data can show if the majority of movement is happening close to home or away form home for example and along with the EMA survey can help researchers better understand how the users movements changed in a location and time based manner.  \\ 
+    \hline
+    Movement based-charging system & Having a system that charges using movement could be benifical to users and help extend usable time. This would mean less charging and greater convinence. We could also strive to reduce the power draw of the device when it is not in use to improve convinence.  \\ 
+    \hline
+	x & x. \\
+	\hline
+	x & x \\ 
+	\hline
+\end{tabular}
+\end{center}
+
 
 \end{document}
