Revised member roles and workflow

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -3,6 +3,7 @@
 \usepackage{booktabs}
 \usepackage{tabularx}
 \usepackage{graphicx}
+\usepackage[table]{xcolor}
 
 \title{Development Plan\\\progname}
 
@@ -33,10 +34,10 @@ September 26 & N/A & Initial documentation\\
 \wss{Put your introductory blurb here.}
 
 \section{Team Meeting Plan}
-Weekly meetings to be held every Saturday at 8:00PM, and additional meetings to be planned as needed. Any meetings requiring the attendance of supervisor will have to be planned based on Dr. Macedo's availability each time. In cases of team members' absence, each absent team members are expected to bring forward their discussion topics prior to the scheduled meeting time, and review the meeting notes posted in the Discord server. Team leaders are expected to write down meeting notes for each meeting, regardless of the number of participating members.\\
+Weekly meetings are to be held every Saturday at 8:00PM, and additional meetings are to be planned as needed. Any meetings requiring the attendance of team's supervisor will have to be planned based on Dr. Macedo's availability each time. In cases where some team members are absent, each absent team members are expected to bring forward their discussion topics prior to the scheduled meeting time, and review the meeting notes posted in the Discord server. Note-taker is expected to write down meeting notes for each meeting, regardless of the number of participating members.\\
 
 \section{Team Communication Plan}
-All main communication channel will be done through the Discord server, including all meetings. Secondary communication will be through Facebook group chat if necessary.\\
+All main communication channel to be done through team's Discord server, including all meetings. Secondary communication will be through Facebook group chat only if necessary.\\
 
 The following is a screen shot of this team's Discord server:\\
 \begin{center}
@@ -44,14 +45,29 @@ The following is a screen shot of this team's Discord server:\\
 \end{center}
 
 \section{Team Member Roles}
-The team will have 2 team leaders (co-leaders), Jonathan Hai and Jessica Bae will take this role. The responsibilities of team leaders are to organize meetings, record meeting notes, assign specific tasks to all team members, overlook deliverable deadlines, keep track of overall team project progress, and communicate with the TA, the professor, and the supervisor.\\
 
-The team will also have a Github leader, responsible for managing all technical Github merge requests and approving them. Labeeb Zaker will take on this role.\\
+\begin{center}
+\begin{tabular}{ | m {3.3cm} | m {3cm} | m{5cm} | }
+  \hline
+ \cellcolor{black}\color{white}\textbf{Role} & \cellcolor{black}\color{white}\textbf{Name} & \cellcolor{black}\color{white}\textbf{Description}\\ [10pt]
+  \hline
+ Team Leader & Jonathan Hai \& Jessica Bae & Organize meetings, assign specific tasks to all team members, overlook deliverable deadlines, keep track of overall team project progress, communicate with the TA, the professor, and the supervisor \\
+ \hline
+ GitHub Leader & Labeeb Zaker \& Nish Shah & Review and approve all Git merge requests from the team  \\  
+ \hline
+ Meeting Coordinator & Anish Rangarajan & Lead the conversation for team meetings. Responsible for preparing meeting agenda.\\
+ \hline
+ Note-Taker & Oliver Foote & Take notes during the meeting and post it in the meeting-notes section of Discord channel for record keeping purposes.\\
+   \hline
+Developer & Everyone & Everyone will work together on the technical component of this project.\\
+\hline
+\end{tabular}
+\end{center}
 
-The task of eviewing rubrics, and each subcomponents of the project will not be assigned to any specific member. These tasks are to be allocated to different members each time, to be decided as needed.\\
+The task of reviewing rubrics, and each subcomponents of the project will not be assigned to any specific members. These tasks are to be allocated to different members each time, to be decided as needed.\\
 
 \section{Workflow Plan}
-For any documentation, team members are not required to put in a merge request. For any technical commits, everyone is required to put in a merge request for the Github leader to review and approve. Trello will be used for project management purposes (non-technical tasks) and Github issue tracker will be used for technical tasks.\\
+Git's branching technique will be used for version control purposes. For any technical commits, everyone is required to put in a formal merge request for GitHub leaders to review and approve or deny. All documentation work does not have to go through GitHub leaders, and can be commited to the main branch right away. Trello will be used for project management purposes (keeping track of non-technical tasks) and Github issue tracker will be used for keeping track of technical tasks.\\
 
 \section{Proof of Concept Demonstration Plan}
 
