improved Goals clarity, removed first person

--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -77,42 +77,40 @@ Constraints include:
     \item Strict data privacy (security)
     \item Accurate timing; system is very sensitive to timing inaccuracies
 \end{itemize}
+\pagebreak
 \section{Base Goals}
 \begin{center}
-\begin{tabular}{ | m{7em} | m{33em}| } 
+\begin{tabular}{ | m{7em} | m{32em}| } 
     \hline
-    \textbf{Goal} & \textbf{Explination and Reasoning} \\
+    \textbf{Goal} & \textbf{Explanation and Reasoning} \\
     \hline
     Tacking Minor Movements & Most activity trackers make it difficult to track minor movements.
-    They are generally created for highly mobile individuals such as athletes or similar. Since our target audience will be older adults who have back and spinal problems, their movements will not be as pronounced as an athletic persons might be. For this reason we need to improve the sensitivity of these trackers and make sure minor movements are appropriately accounted for.  \\ 
+    They are generally created for highly mobile individuals such as athletes or similar. Since the target audience for this device will be older adults who have back and spinal problems; their movements will not be as pronounced as an athletes, for example. For this reason the tracker should have a good amount of sensitivity, so that minor movements are appropriately accounted for.  \\ 
     \hline
-    Event Based Prompting & We want our tracker to be able to prompt individuals when it detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be prompted with specific questions about why they stopped moving. Having some high visibily prompting system such as audio and visual queues would be helpful in ensuring users are properly notified that they should complete the EMA. This data collection is required for Dr. Macdeo's research. \\ 
+    Event Based Prompting & The tracker should be able to prompt individuals when it detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be asked questions such as why they stopped moving, and if they are feeling any pain. Having a high visibily prompting system that includes audio and visual queues would be helpful in notifying participants that they should complete the EMA. This data will then be stored and used for further analysis. \\ 
     \hline
-    Battery Life & We are seeking to reach a minimum battery life of one day which will allow for daytime tracking and nighttime charging. This is a relatively standard practice with most smartphones and activty trackers performing in this manner. If a user has experienced using one of these devices the expectation of nightly charging would be acceptable. By not requiring the user to charge the device during the day we will be able to successfully track their activities without potentially losing some data to charge the device halfway through.  \\ 
+    Battery Life & A minimum battery life of one day will allow for daytime tracking and nighttime charging. This is a relatively standard practice with most smartphones and activty trackers. If a user has experienced using one of these devices the expectation of nightly charging would be something they are already used to. By not requiring the user to charge the device during the day there is a reduced likelihood of data collection disruptions due to charging.  \\ 
     \hline
-	Highly Simplistic User Interface/Hardware design & Becuase our user base is going to be the older adult population, some of whom many not use smartphones or smart activity trackers, it is essentially that the design of our user interface and hardware be intuitive to a user without a lot of experience using smart technology. This also improves the likelihood that a user will fill out the survery successfully and quickly when prompted to do so. \\
+	Highly Simplistic User Interface/Hardware design & The user base for this product will be the older adult population, some of whom many not use smartphones or smart activity trackers. Therefore, it is essential that the design of the user interface and hardware be intuitive to a person without a lot of experience using smart technology. This also improves the likelihood that a user will fill out the survery successfully and quickly when prompted to do so. \\
 	\hline
-	Graphical Presentation of Data & Dr. Macedo requested that we process the collected data into an easy to interepert graphical representation that could be used for her research and displayed to the user to provide feedback on the activities that have been tracked throughout the day. This will allow the users to better understand their movements and keep them on track for rehabilitation purposes, and help "advise" Dr. Macedo's future recommendations for rehabilitation. \\
+	Graphical Presentation of Data & The data will be processed into an easy to interepert graphical or image based format that can be used to interpert the collected data. This will be displayed to the user to provide feedback on the activities that have been tracked throughout the day. Feedback will allow the users to better understand their movements and keep them on track with their rehabilitation programs. \\
 	\hline
 \end{tabular}
 \end{center}
-
+\pagebreak
 \section{Stretch Goals}
 \begin{center}
-\begin{tabular}{ | m{7em} | m{33em}| } 
+\begin{tabular}{ | m{7em} | m{32em}| } 
     \hline
-    \textbf{Goal} & \textbf{Explination and Reasoning} \\
+    \textbf{Goal} & \textbf{Explanation and Reasoning} \\
     \hline
-    Anomoly Detection & We want to be able to detect when certain anamolies occur, such as a user suddenly stopping movement. The goal is to detect multiple different events to be defined later. \\ 
+    Anomoly Detection & The device should detect when certain anamolies occur. Some examples include: an abrupt stop in movement and then a prolonged duration of no movement (indicated a potential accident), major spikes in movements (sudden increases in acceleration, speed or, orientation changes), or other abnormal events. Detecting anomolies could improve user safety and quality of data collection. \\ 
     \hline
-    Geotagging Events and Movements & This would be an additional benefit to the researchers. This data can show if the majority of movement is happening close to home or away form home for example and along with the EMA survey can help researchers better understand how the users movements changed in a location and time based manner.  \\ 
+    Geotagging Events and Movements & Geotracking users and movements could show if a majority of movement is happening close to home or away form home; for example. This data will enable better primary data collection and help understand how users movements change throughout the day in a location and time based manner. \\ 
     \hline
-    Movement based-charging system & Having a system that charges using movement could be benifical to users and help extend usable time. This would mean less charging and greater convinence. We could also strive to reduce the power draw of the device when it is not in use to improve convinence.  \\ 
+    Movement based-charging system & Having a system that charges using movement could be benifical to users and help extend usable time. This would mean less charging and greater convinence. As part of this goal, reducing power draw would be an important aspect to make the movement based charging worthwhile.  \\  
     \hline
-	x & x. \\
-	\hline
-	x & x \\ 
-	\hline
+	
 \end{tabular}
 \end{center}
 
