--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -71,21 +71,29 @@ Git's branching technique will be used for version control purposes. For any tec
 
 \section{Proof of Concept Demonstration Plan}
 
-Ultimately, the risks for the success of our project lie within the software that we design. The hardware component in which we collect data will be designed with a relatively simplistic plug-and-play approach in the goal of feeding data to our software component. We aim to use as many off-the-shelf components and sensors as possible to reduce development overhead and the many possible problems that developing a complex electromechanic system from scratch can involve.\\
+The risks for the success of the project lie primarily within the software that is designed. The hardware component in which data is collected will be designed with a relatively simplistic plug-and-play approach in the goal of feeding data to the software component of the project. As many off-the-shelf components and sensors as possible will be used to reduce development overhead and the many possible problems that developing a complex electromechanic system from scratch can involve. However, a proof-of-concept demonstration is still necessary regarding the ergonomics of the project. Should the hardware take on the form of wearable technology (as is currently planned), a demonstration is necessary to show that the system is possible to be worn comfortably, safely, and unintrusively to the user's daily activities.\\
 
-Our software system will be the lynchpin of our project. Its goal will be to take the various events that are relevant to Ecological Momentary Assessment (EMA) that the hardware component detects and handle them accordingly. This will involve logging timestamps, locations, environmental factors, and other momentary information, and prompting the user to answer self-survey questions relevant to their current situation. The software system will then process the answers to these questions and momentary data, and will send off the data to the team of physicians handling this person's EMA.\\
+The software system will be the lynchpin of the project. Its goal will be to take the various events that are relevant to Ecological Momentary Assessment (EMA) that the hardware component detects and handle them accordingly. This will involve logging timestamps, locations, environmental factors, and other momentary information, and prompting the user to answer self-survey questions relevant to their current situation. The software system will then process the answers to these questions and momentary data, and will send off the data to the team of physicians handling this person's EMA.\\
 
-If we find that the hardware component of our system is incapable of sending data to our software and handling output from our software, continuing with our project involves finding a new method of sensing the user's movement, survey answers, and other relevant data and displaying processed information in return. If we find that the software component of our system is incapable of responding to data input from our hardware, processing said data, and returning meaningful results, then the goal of our entire project is rendered moot.\\
+Other than the ergonomics, if the hardware component of the system is incapable of sending data and handling output from the software, continuing with the project involves finding a new method of sensing the user's movement, survey answers, and other relevant data and displaying processed information in return. If the software component of the system is incapable of responding to data input from the hardware, processing said data, and returning meaningful results, then the goal of the entire project is rendered moot.\\
 
-Our goal for our proof of concept demo will be to demonstrate a functional EMA-enabled software system that can respond to events relevant to EMA, and respond accordingly. This software system will be run locally on one of our team member's computers. It will be capable of:\\
+The goal for the proof of concept demo will be to demonstrate a functional EMA-enabled software system that can respond to events relevant to EMA, and respond accordingly. This software system will be run locally on a team member's computer. It will be capable of:\\
 
 \begin{itemize}
 \item Accepting input in the form of momentary data from events that are triggered as a simulation of real EMA events (such as limps, falls, strange movement patterns, etc.)
 \item Prompting the user to answer relevant self-survey questions
+\item Displaying information and intaking information from the user simplistically according to common HCI guidelines
 \item Processing the inbound EMA and survey data and producing results meaningful to the physicians responsible for the user's EMA
 \item Producing graphical representations of said EMA data
 \item Sending the processed data and representations to the physicians responsible for the user's EMA
 \item Notifying the user about relevant information as a result of processing data (confirmations that data has been sent, recommendations for activity or rest, etc.)
+\end{itemize}
+
+Regarding the hardware component of the project, it will be:\\
+
+\begin{itemize}
+\item Useable/wearable in a safe, comfortable, and non-intrusive manner optimized for human well-being and overall system performance
+\item Placed in a position to collect data relevant to EMA display data regarding EMA related activities
 \end{itemize}
 
 \section{Technology}
