Added descriptions to the constraints

--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -68,14 +68,12 @@ The output will be something that's useful for research and conclusion. This inc
 \wss{Hardware and software}
 
 \subsection{Constraints}
-Constraints include:
+Constraints include. All the numbers included are average and are subject to change:
 \begin{itemize}
-    \item Safety
-    \item Fail-safe
-    \item Offline useability
-    \item Portability
-    \item Strict data privacy (security)
-    \item Accurate timing; system is very sensitive to timing inaccuracies
+    \item Safety: The device will be safe to use, limit any danger to the user.
+    \item Weight: 60 grams. The device will be lightweight, so that it's portable and doesn't impact user's daily activities.
+    \item Dimensions: 40mm long, and 34mm wide with a depth of 10.4 mm. A device of specified dimensions are very ergonomic and comfortable to wear.
+    \item Accurate timing: System is very sensitive to timing inaccuracies, no \linebreak expected delays between detection and reporting.
 \end{itemize}
 \pagebreak
 \section{Base Goals}
