Added R as a potential language along with it's software

--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -106,6 +106,7 @@ The following tools shall be used for development in software, embedded systems 
 \item C will be used to program the embedded system (micro-controllers) for efficiency and memory constraints.
 \item C\# will be used the team decides to use Unity to create parts of the product.
 \item SQL will be used for DBMS and storing data for activity-based tracking.
+\item R will be used for statistical computing and data analysis.
 \end{itemize}
 \item Platforms for development:
 \begin{itemize}
@@ -114,7 +115,9 @@ The following tools shall be used for development in software, embedded systems 
 \item STM32Cube IDE for STM32 development. 
 \item Autodesk Inventor may be used for creating models for the device and finishing product.
 \item MySQL will be used as the platform for interacting with the Database.
+\item The R environment will be used for data manipulation, calculation and graphical display\\\\
 \end{itemize}
+
 \item Version control platforms:
 \begin{itemize}
 \item GitHub will be used for version control for development purposes and general group activity tracking.
