--- a/docs/DevelopmentPlan/DevelopmentPlan.tex
+++ b/docs/DevelopmentPlan/DevelopmentPlan.tex
@@ -34,10 +34,10 @@ September 26 & N/A & Initial documentation\\
 \wss{Put your introductory blurb here.}
 
 \section{Team Meeting Plan}
-Weekly meetings are to be held every Saturday at 8:00PM, and additional meetings are to be planned as needed. Any meetings requiring the attendance of team's supervisor will have to be planned based on Dr. Macedo's availability each time. In cases where some team members are absent, each absent team members are expected to bring forward their discussion topics prior to the scheduled meeting time, and review the meeting notes posted in the Discord server. Note-taker is expected to write down meeting notes for each meeting, regardless of the number of participating members.\\
+Weekly meetings are to be held every Saturday at 8:00PM, and additional meetings are to be planned as needed. Any meetings requiring the attendance of the team's supervisor will have to be planned based on Dr. Macedo's availability. In cases where some team members are absent, each absent member is expected to bring forward their discussion topics prior to the scheduled meeting time, and review the meeting notes posted in the Discord server. Note-taker is expected to write down meeting notes for each meeting, regardless of the number of participating members.\\
 
 \section{Team Communication Plan}
-All main communication channel to be done through team's Discord server, including all meetings. Secondary communication will be through Facebook group chat only if necessary.\\
+All primary communication is to be done through the team's Discord server, including all meetings. Secondary communication will be through the Facebook group chat only if necessary.\\
 
 The following is a screen shot of this team's Discord server:\\
 \begin{center}
@@ -53,7 +53,7 @@ The following is a screen shot of this team's Discord server:\\
   \hline
  Team Leader & Jonathan Hai \& Jessica Bae & Organize meetings, assign specific tasks to all team members, overlook deliverable deadlines, keep track of overall team project progress, communicate with the TA, the professor, and the supervisor \\
  \hline
- GitHub Leader & Labeeb Zaker \& Nish Shah & Review and approve all Git merge requests from the team  \\  
+ GitHub Leader & Labeeb Zaker \& Nish Shah & Review and approve all Git merge requests from the team.  \\  
  \hline
  Meeting Coordinator & Anish Rangarajan & Lead the conversation for team meetings. Responsible for preparing meeting agenda.\\
  \hline
@@ -64,36 +64,36 @@ Developer & Everyone & Everyone will work together on the technical component of
 \end{tabular}
 \end{center}
 
-The task of reviewing rubrics, and each subcomponents of the project will not be assigned to any specific members. These tasks are to be allocated to different members each time, to be decided as needed.\\
+The task of reviewing rubrics, and each subcomponents of the project will not be assigned to any specific members. These tasks are to be allocated to different members each time as and when needed.\\
 
 \section{Workflow Plan}
 Git's branching technique will be used for version control purposes. For any technical commits, everyone is required to put in a formal merge request for GitHub leaders to review and approve or deny. All documentation work does not have to go through GitHub leaders, and can be commited to the main branch right away. Trello will be used for project management purposes (keeping track of non-technical tasks) and Github issue tracker will be used for keeping track of technical tasks.\\
 
 \section{Proof of Concept Demonstration Plan}
 
-The risks for the success of the project lie primarily within the software that is designed. The hardware component in which data is collected will be designed with a relatively simplistic plug-and-play approach in the goal of feeding data to the software component of the project. As many off-the-shelf components and sensors as possible will be used to reduce development overhead and the many possible problems that developing a complex electromechanic system from scratch can involve. However, a proof-of-concept demonstration is still necessary regarding the ergonomics of the project. Should the hardware take on the form of wearable technology (as is currently planned), a demonstration is necessary to show that the system is possible to be worn comfortably, safely, and unintrusively to the user's daily activities.\\
+The risks for the success of the project lie primarily within the software that is designed. The hardware component in which data is collected will be designed with a relatively simplistic plug-and-play approach with the goal of feeding data to the software component of the project. Several off-the-shelf sensors will be used to reduce the development overhead and the many possible problems that developing a complex electromechanic system can involve. However, a proof-of-concept demonstration is still necessary regarding the ergonomics of the project. Should the hardware take on the form of wearable technology (as is currently planned), a demonstration is necessary to show that the system is possible to be worn comfortably, safely, and unintrusively during the user's daily activities.\\
 
-The software system will be the lynchpin of the project. Its goal will be to take the various events that are relevant to Ecological Momentary Assessment (EMA) that the hardware component detects and handle them accordingly. This will involve logging timestamps, locations, environmental factors, and other momentary information, and prompting the user to answer self-survey questions relevant to their current situation. The software system will then process the answers to these questions and momentary data, and will send off the data to the team of physicians handling this person's EMA.\\
+The software system will be the lynchpin of the project. Its goal will be to take the various events detected by the hardware system that are relevant to Ecological Momentary Assessment (EMA) and handle them accordingly. This will involve logging timestamps, locations, environmental factors, and other momentary information, and prompting the user to answer self-survey questions relevant to their current situation. The software system will then process the answers to these questions and the momentary data. Finally it will send off the data to the team of physicians handling the user's EMA at the end of the monitoring period.\\
 
-Other than the ergonomics, if the hardware component of the system is incapable of sending data and handling output from the software, continuing with the project involves finding a new method of sensing the user's movement, survey answers, and other relevant data and displaying processed information in return. If the software component of the system is incapable of responding to data input from the hardware, processing said data, and returning meaningful results, then the goal of the entire project is rendered moot.\\
+Other than the ergonomics, if the hardware component of the system is incapable of sending data and handling output from the software, continuing with the project involves finding a new method of data collection and transfer. If the software component of the system is incapable of responding to data inputs from the hardware, processing said data, and returning meaningful results, then the goal of the entire project is rendered moot.\\
 
 The goal for the proof of concept demo will be to demonstrate a functional EMA-enabled software system that can respond to events relevant to EMA, and respond accordingly. This software system will be run locally on a team member's computer. It will be capable of:\\
 
 \begin{itemize}
-\item Accepting input in the form of momentary data from events that are triggered as a simulation of real EMA events (such as limps, falls, strange movement patterns, etc.)
-\item Prompting the user to answer relevant self-survey questions
-\item Displaying information and intaking information from the user simplistically according to common HCI guidelines
-\item Processing the inbound EMA and survey data and producing results meaningful to the physicians responsible for the user's EMA
-\item Producing graphical representations of said EMA data
-\item Sending the processed data and representations to the physicians responsible for the user's EMA
+\item Accepting inputs in the form of momentary data from events that are triggered as a simulation of real EMA events (such as limps, falls, strange movement patterns, etc.)
+\item Prompting the user to answer relevant self-survey questions.
+\item Displaying information and intaking information from the user simplistically according to common HCI guidelines.
+\item Processing the inbound EMA and survey data and producing results meaningful to the physicians responsible for the user's EMA.
+\item Producing graphical representations of said EMA data.
+\item Sending the processed data and representations to the physicians responsible for the user's EMA.
 \item Notifying the user about relevant information as a result of processing data (confirmations that data has been sent, recommendations for activity or rest, etc.)
 \end{itemize}
 
 Regarding the hardware component of the project, it will be:\\
 
 \begin{itemize}
-\item Useable/wearable in a safe, comfortable, and non-intrusive manner optimized for human well-being and overall system performance
-\item Placed in a position to collect data relevant to EMA display data regarding EMA related activities
+\item Useable/wearable in a safe, comfortable, and non-intrusive manner optimized for human well-being and overall system performance.
+\item Placed in a position to collect data relevant to EMA display data regarding EMA related activities.
 \end{itemize}
 
 \section{Technology}
