--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -35,13 +35,13 @@
 
 \subsection{Motivation Problem}
 
-Dr. Luciana Macedo investigates treatment strategies for elders with  lumbar spinal disorders (LSS), particularly focused on Ecological Momentary Assessment (EMA). EMA aims to study the thoughts, experiences, and behaviours of patients' daily lives by repeatedly collecting data in their day-to-day environment, at or close to the time they carry out that particular behaviour.\\
+Dr. Luciana Macedo investigates treatment strategies for older adults with  lumbar spinal disorders (LSS), particularly focused on Ecological Momentary Assessment (EMA). EMA aims to study the thoughts, experiences, and behaviours of patients' daily lives by repeatedly collecting data in their day-to-day environment, at or close to the time they carry out that particular behaviour.\\
 
-Since Dr. Macedo's EMA work is focused on analyzing the daily activities and symptoms of mostly-elderly people with mobility issues, her solution needs to capture their slow and subtle movements. In order to accomplish this, she and her students have attempted to use various smart-watch-esque activity tracking devices along with various software applications to prompt their patients with questions. However, they have been frustrated with very limited success.\\
+Since Dr. Macedo's EMA work is focused on analyzing the daily activities and symptoms of mostly-older adults with mobility issues, her solution needs to capture their slow and subtle movements. In order to accomplish this, she and her students have attempted to use various smart-watch-esque activity tracking devices along with various software applications to prompt their patients with questions. However, they have been frustrated with very limited success.\\
 
-Their current system works on a time-based prompt-system, asking questions at regular intervals throughout the day. This isn't as useful, as they are rather interested in the experiences of their patients when certain events or triggers happen. In addition, all of her data collection methods are heavily segregated and inefficient. In order to report their symptoms, a patient must input their answers into a smart watch, a mobile app, a website, etc. According to Dr. Macedo, this is not quite user-friendly especially when it comes to a group of elderly patients, and incredibly annoying and difficult for a researcher to analyze the gathered data. Importantly, the existing commercial products are designed to capture the activities of healthy and active people, which contrasts with what she is trying to caputre: shuffling, limping, slower walking, etc.\\
+Their current system works on a time-based prompt-system, asking questions at regular intervals throughout the day. This is not as useful, as they are rather interested in the experiences of their patients when certain events or triggers happen. In addition, all of her data collection methods are heavily segregated and inefficient. In order to report their symptoms, a patient must input their answers into a smart watch, a mobile app, a website, etc. According to Dr. Macedo, this is not quite user-friendly especially when it comes to a group of older adult patients, and incredibly annoying and difficult for a researcher to analyze the gathered data. Importantly, the existing commercial products are designed to capture the activities of healthy and active people, which contrasts with what she is trying to caputre: shuffling, limping, slower walking, etc.\\
 
-This solution device would have to capture the subtle and slow movement of elderly patience with lumbar spinal stenosis (LSS) and prompt them with pre-determined questions when they stop or make certain type of  movements. It will then have to collect and send those data back to Dr. Macedo for her analysis.
+This solution device would have to capture the subtle and slow movement of older adult patients with lumbar spinal stenosis (LSS) and prompt them with pre-determined questions when they stop or make certain type of  movements. It will then have to collect and send those data back to Dr. Macedo for her analysis.
 
 \subsection{Inputs and Outputs}
 
