Changed event-based prompting to activity based prompting in base goals

--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -85,7 +85,7 @@ Constraints include. All the numbers included are average and are subject to cha
         Tacking Minor Movements                          & Most activity trackers make it difficult to track minor movements.
         They are generally created for highly mobile individuals such as athletes or similar. Since the target audience for this device will be older adults who have back and spinal problems; their movements will not be as pronounced as an athletes, for example. For this reason the tracker should have a good amount of sensitivity, so that minor movements are appropriately accounted for.                                                                                                                                                                                                                                                       \\
         \hline
-        Event Based Prompting                            & The tracker should be able to prompt individuals when it detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be asked questions such as why they stopped moving, and if they are feeling any pain. Having a high visibily prompting system that includes audio and visual queues would be helpful in notifying participants that they should complete the EMA. This data will then be stored and used for further analysis. \\
+        Activity Based Prompting                            & The tracker should be able to prompt individuals when the activity monitoring system detects that a particular event has occurred, such as no movement after a period of movement.  Once prompted the individual will be asked to complete a Ecological Momentary Assessment (EMA) survey, in which they will be asked questions such as why they stopped moving, and if they are feeling any pain. Having a high visibile prompting system that includes audio and visual queues would be helpful in notifying participants that they should complete the EMA. This data will then be stored and used for further analysis. \\
         \hline
         Battery Life                                     & A minimum battery life of one day will allow for daytime tracking and nighttime charging. This is a relatively standard practice with most smartphones and activty trackers. If a user has experienced using one of these devices the expectation of nightly charging would be something they are already used to. By not requiring the user to charge the device during the day there is a reduced likelihood of data collection disruptions due to charging.                                                                                                                                   \\
         \hline
