--- a/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
+++ b/docs/ProblemStatementAndGoals/Team1_ProblemStatement & Goals.tex
@@ -74,6 +74,7 @@ Constraints include. All the numbers included are average and are subject to cha
     \item Weight: 60 grams. The device will be lightweight, so that it's portable and doesn't impact user's daily activities.
     \item Dimensions: 40mm long, and 34mm wide with a depth of 10.4 mm. A device of specified dimensions are very ergonomic and comfortable to wear.
     \item Accurate timing: System is very sensitive to timing inaccuracies, no \linebreak expected delays between detection and reporting.
+    \item Battery Life: The device should be operable for a minimum of 7 days without having to charge or replace the battery, as this is the standard length for one EMA evaluation session.
 \end{itemize}
 \pagebreak
 \section{Base Goals}
